# HOGcpp-Test

./: CMakeLists.txt
include/: feature_extraction.h
src/: detect_screws.cpp  detect_try1.cpp  train.cpp
